--- a/snack-manufacturing-business/snacks.scss
+++ b/snack-manufacturing-business/snacks.scss
@@ -145,6 +145,7 @@
                     }
                     #phone {
                         grid-area: 3 / 1 / 4 / 2;
+                        width: 100%;
                     }
                     #tellUs {
                         grid-area: 1 / 2 / 4 / 3;
@@ -500,6 +501,8 @@
         border: 1px solid var(--Border-Default-Default, #d9d9d971);
         resize: none;
         overflow: auto;
+        width: 100%;
+        height: 100%;
     }
     button {
         border-radius: 35px;
