--- a/snack-manufacturing-business/snacks.css
+++ b/snack-manufacturing-business/snacks.css
@@ -450,6 +450,14 @@
   border-radius: 35px;
 }
 
+.alert_second {
+  position: absolute;
+  bottom: 5px;
+  right: var(--paddingX);
+  font-size: 14px;
+  color: #fff;
+}
+
 @media screen and (max-width: 1536px) {
   :root {
     --paddingX: 5vw;
@@ -669,6 +677,14 @@
     width: auto;
     margin-bottom: 20px;
     filter: invert(0);
+  }
+  #form input {
+    height: auto;
+  }
+  #form .alert_second {
+    position: unset;
+    width: 100%;
+    text-align: right;
   }
   #form.active {
     opacity: 1;
