--- a/africa-calling-textile-manufactures/snacks.css
+++ b/africa-calling-textile-manufactures/snacks.css
@@ -567,7 +567,7 @@
     height: auto;
   }
   #new_added .content > div {
-    gap: clamp(5rem, -9.5455rem + 22.7273vw, 7.5rem);
+    gap: clamp(4rem, -9.5455rem + 22.7273vw, 7.5rem);
   }
   #new_added .content > div > div img {
     height: clamp(3.4375rem, -2.017rem + 8.5227vw, 4.375rem);
@@ -651,6 +651,9 @@
 @media screen and (max-width: 768px) {
   :root {
     --font-70: 35px;
+  }
+  #new_added .content {
+    padding: var(--paddingY) var(--paddingX);
   }
   #new_added .content > p {
     text-align: center;
