--- a/africa-calling-textile-manufactures/snacks.css
+++ b/africa-calling-textile-manufactures/snacks.css
@@ -277,10 +277,10 @@ input[type=checkbox]:checked::after {
 }
 #second .right .chips .arrow {
   position: absolute;
-  bottom: 0;
-  right: -190px;
-  height: 55%;
-  transform: rotate(10deg) scale(0.5);
+  bottom: 30px;
+  right: -140px;
+  width: 220px;
+  transform: rotate(10deg);
   z-index: 0;
 }
 #second .right .projected {
@@ -589,7 +589,8 @@ input[type=checkbox]:checked::after {
     right: -2.5vw;
   }
   #second .right .chips .arrow {
-    right: -180px;
+    right: -70px;
+    width: 140px;
   }
   #second .right .leftpop {
     left: 10%;
