--- a/africa-calling-textile-manufactures/snacks.scss
+++ b/africa-calling-textile-manufactures/snacks.scss
@@ -279,11 +279,11 @@ input[type=checkbox]:checked::after {
             }
             .arrow {
                 position: absolute;
-                bottom: 0;
-                right: -190px;
-                height: 55%;
+                bottom: 30px;
+                right: -140px;
+                width: 220px;
                 // scale: .5;
-                transform: rotate(10deg) scale(.5);
+                transform: rotate(10deg);
                 z-index: 0;
             }
         }
@@ -654,7 +654,8 @@ input[type=checkbox]:checked::after {
             }
             .chips {
                 .arrow {
-                    right: -180px;
+                    right: -70px;
+                    width: 140px;
                 }
             }
             .leftpop {
