--- a/africa-calling-textile-manufactures/snacks.css
+++ b/africa-calling-textile-manufactures/snacks.css
@@ -867,6 +867,7 @@ input[type=checkbox]:checked::after {
     bottom: 0;
     transform: translateY(150%);
     transition: all 0.2s ease;
+    z-index: 9;
   }
   .fixedBtn > .arrowDiv {
     width: 120px;
