--- a/africa-calling-textile-manufactures/snacks.scss
+++ b/africa-calling-textile-manufactures/snacks.scss
@@ -1003,6 +1003,7 @@ input[type=checkbox]:checked::after {
         bottom: 0;
         transform: translateY(150%);
         transition: all 0.2s ease;
+        z-index: 9;
         & > .arrowDiv {
             width: 120px;
             height: 20px;
