--- a/africa-calling-textile-manufactures/snacks.css
+++ b/africa-calling-textile-manufactures/snacks.css
@@ -506,7 +506,7 @@ input[type=checkbox]:checked::after {
 #footer .foot {
   height: clamp(5rem, -1.1643rem + 7.2202vw, 7.5rem);
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: auto auto auto;
   color: #fff;
   font-weight: 400;
   font-size: clamp(0.875rem, -0.3579rem + 1.444vw, 1.375rem);
@@ -745,11 +745,11 @@ input[type=checkbox]:checked::after {
   #footer .foot {
     grid-template-columns: auto;
     height: auto;
-    gap: 50px;
+    gap: 30px;
     justify-items: center;
   }
   #footer .foot img {
-    height: 50px;
+    height: 60px;
   }
   #footer .foot > div {
     gap: 20px;
