--- a/africa-calling-textile-manufactures/snacks.scss
+++ b/africa-calling-textile-manufactures/snacks.scss
@@ -565,7 +565,7 @@ input[type=checkbox]:checked::after {
     .foot {
         height: clamp(5rem, -1.1643rem + 7.2202vw, 7.5rem);
         display: grid;
-        grid-template-columns: auto auto;
+        grid-template-columns: auto auto auto;
         color: #fff;
         font-weight: 400;
         font-size: clamp(0.875rem, -0.3579rem + 1.444vw, 1.375rem);
@@ -843,10 +843,10 @@ input[type=checkbox]:checked::after {
         .foot {
             grid-template-columns: auto;
             height: auto;
-            gap: 50px;
+            gap: 30px;
             justify-items: center;
             img {
-                height: 50px;
+                height: 60px;
             }
             & > div {
                 gap: 20px;
