--- a/africa-calling-textile-manufactures/snacks.scss
+++ b/africa-calling-textile-manufactures/snacks.scss
@@ -563,21 +563,25 @@ input[type=checkbox]:checked::after {
     padding: clamp(3.125rem, -7.6625rem + 12.6354vw, 7.5rem) var(--paddingX);
     padding-bottom: calc(var(--paddingY) + 100px);
     .foot {
-        height: clamp(5rem, -1.1643rem + 7.2202vw, 7.5rem);
+        // height: clamp(5rem, -1.1643rem + 7.2202vw, 7.5rem);
         display: grid;
         grid-template-columns: auto auto auto;
         color: #fff;
         font-weight: 400;
         font-size: clamp(0.875rem, -0.3579rem + 1.444vw, 1.375rem);
         gap: 80px;
+        align-items: end;
         img {
-            height: clamp(5rem, -1.1643rem + 7.2202vw, 7.5rem);
+            height: clamp(3.75rem, -5.1786rem + 9.5238vw, 6.25rem);
         }
         & > div {
             display: flex;
             flex-direction: column;
             justify-content: space-between;
             text-transform: uppercase;
+        }
+        .presence_across{
+            margin-bottom: 10px;
         }
         p {
             color: #fff;
@@ -814,6 +818,10 @@ input[type=checkbox]:checked::after {
 }
 .fixedBtn {
     display: none;
+}
+
+.afi_logo{
+    justify-content: center !important;
 }
 @media screen and (max-width: 768px) {
     :root {
